# Integration

./: Integration.sln
Integration/: CMakeLists.txt  Errors.txt  ErrorsEmail.txt  ErrorsFTP.txt  ErrorsIntegration.txt  Integration.vcxproj  Integration.vcxproj.filters  app_icon.rc  config.conf  main.cpp  onedrive_handler.cpp  onedrive_handler.h  test.conf
Integration/include/: analytics.h  base_file.h  db_connection.h  file_info.h  ftp_handler.h  integration_handler.h  mail_handler.h  utils.h
Integration/mailFiles/unit/substation/object/: REXPR805.615
Integration/src/: analytics.cpp  base_file.cpp  db_connection.cpp  ftp_handler.cpp  integration_handler.cpp  mail_handler.cpp  utils.cpp
